[package]
name = "egc-sigma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.8"
etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk.git", default-features = false}
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["signature", "encryption"] }
rand_chacha = { version = "0.3.1", default-features = false }

[dev-dependencies]
ark-ed-on-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "r1cs" ] }
